# genotype

./: .editorconfig  .gitignore  .oxfmtrc.json  .oxlintrc.json  .prettierignore  AGENTS.md  Cargo.toml  README.md  biome.jsonc  deno.json  eslint.config.js  hierarchy.html  index.html  justfile  modules.html  package.json  rust-toolchain.toml  tsconfig.json  vitest.config.ts
.cargo/: config.toml
assets/: hierarchy.js  highlight.css  navigation.js  search.js
classes/: AlignmentParser.html  AlphabetValidationError.html  BAIIndexError.html  BAIReader.html  BAIWriter.html  BAMParser.html  BAMWriter.html  BGZFCompressor.html  BackendService.html  BackendUnavailableError.html  BamError.html  BedError.html  BedParser.html  BedWriter.html  BufferError.html  CSVParser.html  CSVWriter.html  CharSet.html  ChromosomeNamingError.html  CigarValidationError.html  CompatibilityError.html  CompressionError.html  ConcatError.html  ConcatProcessor.html  DSVParseError.html  DSVParser.html  DSVWriter.html  FastaParser.html  FastaWriter.html  FastqParser.html  FastqWriter.html  FileError.html  FormatDetectionError.html  GenomicCoordinateError.html  GenotypeError.html  GenotypeString.html  GrepError.html  LocateError.html  MemoryError.html  PairSyncError.html  (+17 more)
crates/engine/: Cargo.toml
crates/engine/src/: alignment.rs  classify.rs  fasta.rs  fastq.rs  grep.rs  hash.rs  lib.rs  metrics.rs  paired_merge.rs  quality.rs  sequence_sort.rs  transform.rs  translate.rs
crates/napi-adapter/: Cargo.toml
crates/napi-adapter/src/: alignment.rs  fasta.rs  fastq.rs  lib.rs  sequence_sort.rs
crates/wasm-adapter/: Cargo.toml
crates/wasm-adapter/src/: lib.rs
examples/: README.md  amplicon-extract.ts  bam-writer-example.ts  basic-usage.ts  complete-pipeline.ts  developer-integration.ts  dx-demonstration.ts  enhanced-subseq.ts  faidx-extract.ts  fasta-to-tabular.ts  getting-started.ts  kmers-and-windows.ts  paired-fastq-workflow.ts  qc-fastq.ts  quality-binning.ts  query-gtf.ts  real-world-pipelines.ts  roundtrip-parquet.ts  seqkit-concat.ts  seqkit-fq2fa.ts  seqkit-grep.ts  seqkit-head.ts  seqkit-locate.ts  seqkit-rmdup.ts  seqkit-sample.ts  seqkit-seq.ts  seqkit-sort.ts  seqkit-split.ts  seqkit-stats.ts  seqkit-subseq.ts  seqkit-translate.ts  seqops-pipeline.ts  sort-fastq-by-sequence.ts  summarize-alignments.ts  tsconfig.json
functions/: assertUnreachable.html  batchLines.html  calculateAverageQuality.html  calculateErrorRate.html  calculateQualityStats.html  calculateStats.html  charToScore.html  complement.html  convertQuality.html  createAlignmentRecord.html  createBamAlignment.html  createContextualError.html  createDecompressor.html  createFastaRecord.html  createFastqRecord.html  createKmerRecord.html  createSamAlignment.html  detectDelimiter.html  detectEncoding.html  detectEncodingImmediate.html  detectEncodingStatistical.html  detectEncodingWithConfidence.html  detectFormat.html  detectRuntime.html  errorProbabilityToScore.html  estimateCompressionRatio.html  getCurrentPlatformTarget.html  getEncodingInfo.html  getErrorSuggestion.html  getNativeKernel.html  getOffset.html  getOptimalBufferSize.html  getRecommendedCompression.html  getRuntimeCapabilities.html  getRuntimeGlobals.html  getRuntimeInfo.html  getSupportedEncodings.html  isCompressionSupported.html  isDNASequence.html  isIUPACSequence.html  (+31 more)
interfaces/: AbstractSequence.html  AlignmentRecord.html  AlignmentRecordInput.html  BAIBin.html  BAIChunk.html  BAIIndex.html  BAILinearIndex.html  BAIQueryResult.html  BAIReaderOptions.html  BAIReference.html  BAIStatistics.html  BAIWriterOptions.html  BAMAlignment.html  BAMHeader.html  BAMWriterOptions.html  BGZFBlock.html  BamAlignmentInput.html  BedInterval.html  CleanOptions.html  CompressionDetection.html  ConcatOptions.html  DSVParserOptions.html  DSVRecord.html  DSVWriterOptions.html  DecompressorOptions.html  DetectionResult.html  DnaTag.html  FASTXSequence.html  FastaRecordInput.html  FastaSequence.html  FastqRecordInput.html  FastqSequence.html  FileIOContext.html  FileMetadata.html  FileReaderOptions.html  FileValidationResult.html  FilterOptions.html  FormatDetection.html  IupacTag.html  KmerRecordInput.html  (+25 more)
scripts/: build-publish-artifacts.mjs  build.js  build.mjs  consumer-check.mjs  demo.ts  pack.mjs  publish.mjs
src/: constructors.ts  errors.ts  genotype-string.ts  index.ts  native.ts  types.ts  zig.ts
src/native/: Cargo.toml  index.d.ts  index.js
src/native/src/: alignment.rs  bench.rs  classify.rs  grep.rs  lib.rs  quality.rs  transform.rs
test/: genotype-string.test.ts  matchers.test.ts  matchers.ts  quality-import.test.ts  transforms-import.test.ts  validation-fixes.test.ts
types/: AsciiOffset.html  BAIBinNumber.html  CIGARString.html  CompressedStream.html  CompressionFormat.html  DNASequence.html  FileHandle.html  FilePath.html  IUPACSequence.html  InferSchema.html  MAPQScore.html  ParseResult.html  PrimerSequence.html  QualityChar.html  QualityEncoding-1.html  QualityEncoding.html  QualityOptions.html  QualityScore.html  RNASequence.html  Runtime.html  SAMFlag.html  Strand.html  ValidateOptions.html  VirtualOffset.html  dna.html  isDNASequence.html  isIUPACSequence.html  isPrimerSequence.html  isRNASequence.html  iupac.html  primer.html  rna.html
variables/: BAIBinNumberSchema.html  BAIBinSchema.html  BAIChunkSchema.html  BAIIndexSchema.html  BAILinearIndexSchema.html  BAIQueryResultSchema.html  BAIReaderOptionsSchema.html  BAIReferenceSchema.html  BAIWriterOptionsSchema.html  BAMUtils.html  Bases.html  BedFormat.html  BedIntervalSchema.html  BedUtils.html  BinningUtils.html  SAMUtils.html  (+38 more)
(+238 files in other folders)
