[workspace]
members = ["src/native"]
default-members = ["src/native"]
resolver = "2"

[workspace.dependencies]
# Future: shared dependencies across workspace members if needed

[workspace.metadata]
# Metadata for the entire workspace

[profile.release]
lto = true # Link-time optimization
codegen-units = 1 # Single codegen unit for max optimization  
panic = "abort" # Smaller binary size, no unwinding
strip = true # Remove debug symbols
