[workspace]
members = ["src/native", "crates/engine"]
default-members = ["src/native"]
resolver = "2"

[workspace.dependencies]
# Future: shared dependencies across workspace members if needed

[workspace.metadata]
# Metadata for the entire workspace

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
unwrap_used = "deny"

[profile.release]
lto = true # Link-time optimization
codegen-units = 1 # Single codegen unit for max optimization  
panic = "abort" # Smaller binary size, no unwinding
strip = true # Remove debug symbols
