[package]
name = "genotype-engine"
version = "0.1.0"
edition = "2021"
description = "Presentation-agnostic compute kernels for genotype bioinformatics library"

[lib]
crate-type = ["rlib"]

[dependencies]
rayon = "1.11"
sassy = { version = "0.2.1", default-features = false }
smallvec = "1.15"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
flate2 = "1.1"
noodles-bam = "0.87"
noodles-bgzf = "0.46"
noodles-fasta = "0.60"
noodles-fastq = "0.22"
noodles-sam = "0.83"

[features]
default = []
# Silence ensure_simd's AVX/NEON-only compile-time guard for wasm32 targets.
# Does not disable SIMD — wide selects wasm simd128 intrinsics independently
# via #[cfg(target_feature="simd128")], controlled by rustflags in .cargo/config.toml.
wasm-simd = ["sassy/scalar"]

[lints]
workspace = true
