[package]
name = "genotype-wasm"
version = "0.1.0"
edition = "2021"
description = "WebAssembly adapter for genotype compute engine"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
genotype-engine = { path = "../engine", features = ["wasm-simd"] }
wasm-bindgen = "0.2"

[lints]
workspace = true
