[package]
name = "genotype-native"
version = "0.1.0"
edition = "2021"
description = "Native performance layer for genotype bioinformatics library"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3", features = ["napi8"] }
napi-derive = "3"
noodles-bam = "0.87"
noodles-bgzf = "0.46"
noodles-core = "0.19"
noodles-sam = "0.83"
rayon = "1.11"
sassy = { version = "0.2.0", default-features = false }
smallvec = "1.15"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[lints]
workspace = true

[build-dependencies]
napi-build = "2"
